fix(style): Fix overflow on create account buttons

--- a/src/pages/create-account/create-account.component.scss
+++ b/src/pages/create-account/create-account.component.scss
@@ -30,7 +30,7 @@
 
     .buttons {
         display: flex;
-        overflow-y: hidden;
+        overflow: hidden;
         flex-direction: column;
         gap: 1em;
         width: 30em;
